--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-i18next": "^13.2.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.15.0",
-    "react-scrollama": "^2.3.3"
+    "react-scrollama": "^2.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
